--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Caculator</title>
   <link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 
 <body>
+  <!-- 버튼 기반 계산기 -->
+  <div class="row">
+    <input class="input" type="text" value="123 + 80 = 203" disabled>
+  </div>
   <div class="row">
     <button class="btn">7</button>
     <button class="btn">8</button>
