--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Caculator</title>
   <link rel="stylesheet" type="text/css" href="./main.css">
-  <script scr="./main.js"></script>
+  <script src="./main.js"></script>
 </head>
 
 <body>
