--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
     <button class="btn" onclick="inputNum(4)">4</button>
     <button class="btn" onclick="inputNum(5)">5</button>
     <button class="btn" onclick="inputNum(6)">6</button>
-    <button class="btn">+</button>
+    <button class="btn" onclick="inputOper('+')">+</button>
   </div>
   <div class="row">
     <button class="btn" onclick="inputNum(1)">1</button>
     <button class="btn" onclick="inputNum(2)">2</button>
     <button class="btn" onclick="inputNum(3)">3</button>
-    <button class="btn">-</button>
+    <button class="btn" onclick="inputOper('-')">-</button>
   </div>
   <div class="row">
     <button class="btn btn-lg" onclick="inputNum(0)">0</button>
-    <button class="btn">/</button>
-    <button class="btn">*</button>
+    <button class="btn" onclick="inputOper('/')">/</button>
+    <button class="btn" onclick="inputOper('*')">*</button>
   </div>
 </body>
 </html>
