--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button class="btn" onclick="inputNum(7)">7</button>
     <button class="btn" onclick="inputNum(8)">8</button>
     <button class="btn" onclick="inputNum(9)">9</button>
-    <button class="btn">=</button>
+    <button class="btn" onclick="inputEqu()">=</button>
   </div>
   <div class="row">
     <button class="btn" onclick="inputNum(4)">4</button>
